# Flugrobotik

./: ROS2.md  Setup.md  build.sh
.devcontainer/: devcontainer.json  docker.compose.yml
docker/: Dockerfile  docker-compose.windows_dev.yaml
src/crazyflies/: package.xml  setup.cfg  setup.py
src/crazyflies/crazyflies/: Dreieck.py  crazyflie.py  crazyflie_types.py  gateway_endpoint.py  position_visualization.py  safeflie.py
src/crazyflies/crazyflies/safe/: safe_commander.py
src/crazyflies/launch/: framework.launch.py  safeflie.launch.py
src/crazyflies_interfaces/: CMakeLists.txt  package.xml
src/crazyflies_interfaces/msg/: SendTarget.msg
src/dependencies/crazyflie_hardware/: .gitignore  .gitmodules  README.md
src/dependencies/crazyflie_hardware/crazyradio_firmware/: crazyradio2.uf2
src/dependencies/crazyflie_hardware/src/broadcaster_interfaces/: CMakeLists.txt  package.xml
src/dependencies/crazyflie_hardware/src/crazyflie_hardware/: package.xml  setup.cfg  setup.py
src/dependencies/crazyflie_hardware/src/crazyflie_hardware_cpp/: CMakeLists.txt  package.xml
src/dependencies/crazyflie_hardware/src/crazyflie_hardware_cpp/include/crazyflie_hardware_cpp/: crtp_link_ros.hpp
src/dependencies/crazyflie_hardware/src/crazyflie_hardware_cpp/include/crazyflie_hardware_cpp/crtp_driver_cpp/: console.hpp  generic_commander.hpp  hl_commander.hpp  localization.hpp  logblock.hpp  logging.hpp  parameters.hpp
src/dependencies/crazyflie_hardware/src/crazyflie_hardware_cpp/src/: broadcaster.cpp  crazyflie.cpp  crtp_link_ros.cpp
src/dependencies/crazyflie_hardware/src/crazyflie_hardware_cpp/src/crtp_driver_cpp/: console.cpp  generic_commander.cpp  hl_commander.cpp  localization.cpp  logblock.cpp  logging.cpp  parameters.cpp
src/dependencies/crazyflie_hardware/src/crazyflie_hardware_examples/: package.xml  setup.cfg  setup.py
src/dependencies/crazyflie_hardware/src/crazyradio/: CMakeLists.txt  package.xml
src/dependencies/crazyflie_hardware/src/crazyradio/src/: crazyradio_node.cpp
src/dependencies/crazyflie_hardware/src/crtp_cpp/: CMakeLists.txt  old.txt  package.xml
src/dependencies/crazyflie_hardware/src/crtp_cpp/include/crtp_cpp/link/: _CMakeLists.txt  crtp_link.hpp
src/dependencies/crazyflie_hardware/src/crtp_cpp/include/crtp_cpp/logic/: _CMakeLists.txt  basic_commander_logic.hpp  console_logic.hpp  generic_commander_logic.hpp  hl_commander_logic.hpp  link_layer_logic.hpp  localization_logic.hpp  logging_logic.hpp  logic.hpp  logtocentry.hpp  parameters_logic.hpp  toc_logic.hpp
src/dependencies/crazyflie_hardware/src/crtp_cpp/include/crtp_cpp/packer/: _CMakeLists.txt  basic_commander_packer.hpp  console_packer.hpp  crtp_packer.hpp  generic_commander_packer.hpp  hl_commander_packer.hpp  link_layer_packer.hpp  localization_packer.hpp  logging_packer.hpp  parameters_packer.hpp  toc_packer.hpp
src/dependencies/crazyflie_hardware/src/crtp_cpp/src/crtp_cpp/link/: crtp_link.cpp
src/dependencies/crazyflie_hardware/src/crtp_cpp/src/crtp_cpp/logic/: basic_commander_logic.cpp  console_logic.cpp  generic_commander_logic.cpp  hl_commander_logic.cpp  link_layer_logic.cpp  localization_logic.cpp  logging_logic.cpp  logic.cpp  logtocentry.cpp  parameters_logic.cpp  toc_logic.cpp
src/dependencies/crazyflie_hardware/src/crtp_cpp/src/crtp_cpp/packer/: basic_commander_packer.cpp  console_packer.cpp  crtp_packer.cpp  generic_commander_packer.cpp  hl_commander_packer.cpp  link_layer_packer.cpp  localization_packer.cpp  logging_packer.cpp  parameters_packer.cpp  toc_packer.cpp
src/dependencies/crazyflie_hardware/src/crtp_cpp_test/: CMakeLists.txt  package.xml
src/dependencies/crazyflie_hardware/src/crtp_cpp_test/src/: test_node.cpp
src/dependencies/crazyflie_webots/: README.md  build.sh
src/dependencies/crazyflie_webots/src/crazyflie_webots/: CMakeLists.txt  package.xml
src/dependencies/crazyflie_webots/src/crazyflie_webots/include/crazyflie_webots/crtp_driver/: console.hpp  generic_commander.hpp  hl_commander.hpp  localization.hpp  logblock.hpp  logging.hpp  parameters.hpp
src/dependencies/crazyflie_webots/src/crazyflie_webots/include/crazyflie_webots/webots_driver/: webots_crazyflie_driver.hpp  webots_robot_driver.hpp  webots_wand_driver.hpp
src/dependencies/crazyflie_webots/src/crazyflie_webots/src/: crazyflie.cpp  wand.cpp
src/dependencies/crazyflie_webots/src/crazyflie_webots/src/crtp_driver/: console.cpp  generic_commander.cpp  hl_commander.cpp  localization.cpp  logblock.cpp  logging.cpp  parameters.cpp
src/dependencies/crazyflie_webots/src/crazyflie_webots/src/webots_driver/: webots_crazyflie_driver.cpp  webots_robot_driver.cpp  webots_wand_driver.cpp
src/dependencies/ros-motioncapture/: .gitignore  .gitmodules  LICENSE  README.md
src/dependencies/ros-motioncapture/ros_motioncapture/: CMakeLists.txt  package.xml
src/dependencies/ros-motioncapture/ros_motioncapture/launch/: launch.py
src/dependencies/ros-motioncapture/ros_motioncapture/scripts/: motioncapture_node.py
src/dependencies/ros-motioncapture/ros_motioncapture/src/: motioncapture_node.cpp
src/object_tracker_interfaces/: CMakeLists.txt  package.xml
src/object_tracker_interfaces/srv/: AddTrackerObject.srv  RemoveTrackerObject.srv
src/rqt_crazyflies/: CMakeLists.txt  add_plugin.xml  package.xml  state_plugin.xml
src/rqt_crazyflies/include/rqt_crazyflies/: crazyflie_connection.hpp  crazyflie_control_modal.hpp  crazyflie_status_frame.hpp  crazyflie_status_widget.hpp  state_plugin.hpp
src/rqt_crazyflies/scripts/: state_plugin
src/rqt_crazyflies/src/: crazyflie_connection.cpp  crazyflie_control_modal.cpp  crazyflie_status_frame.cpp  crazyflie_status_widget.cpp  state_plugin.cpp
src/rqt_crazyflies/src/uis/: crazyflie_control_modal.ui  crazyflie_status_widget.ui  crazyflies_batteries_list.ui
src/rqt_crazyflies_add/: add_plugin.xml  package.xml  readme.md  setup.cfg  setup.py
src/rqt_crazyflies_add/resource/: crazyflies_add.ui
src/rqt_crazyflies_add/rqt_crazyflies_add/: add_api.py  add_plugin.py  add_widget.py  saved_crazyflie.py
(+129 files in other folders)
