<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_crazyflies_add</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vinzenz.malke@uni-a.de">winni</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>qt_gui_py_common</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rqt_console</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_py_common</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <architecture_independent/>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/add_plugin.xml"/>
  </export>
</package>