<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crtp_cpp</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vinzenz@malke.info">winni</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>ament_index_cpp</build_depend>


  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>ament_cmake_gen_version_h</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_export_depend>ament_index_cpp</build_export_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
